--- a/modules/admin_manual/pages/configuration/files/file_sharing_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/file_sharing_configuration.adoc
@@ -94,7 +94,7 @@ However, it can be changed to any of the currently available languages.
 It is also possible to change this setting on the command-line by using
 xref:configuration/server/occ_command.adoc#config-commands[the occ config:app:set command], as in this example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} \
     config:app:set core shareapi_public_notification_lang \
@@ -243,15 +243,16 @@ Trashbin contents are not transferred.
 
 Here is an example of how to transfer all files from one user to another.
 
+[source,bash,subs="attributes+"]
 ----
-occ files:transfer-ownership <source-user> <destination-user>
+{occ-command-example-prefix} files:transfer-ownership <source-user> <destination-user>
 ----
 
 Here is an example of how to transfer _a limited group_ a single folder
 from one user to another. In it, `folder/to/move`, and any file and
 folder inside it will be moved to `<destination-user>`.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files:transfer-ownership --path="folder/to/move" <source-user> <destination-user>
 ----
@@ -299,12 +300,11 @@ If you need to create new shares using command-line scripts, there are two avail
 === occ files_external:create
 
 This command provides for the creation of both personal (for a specific user) and general shares.
-The command’s configuration options can be provided either as individual arguments or collectively, as a JSON object.
-For more information about the command, refer to the xref:configuration/server/occ_command.adoc#files-external[the occ files-external documentation].
+The command’s configuration options can be provided either as individual arguments or collectively, as a JSON object. For more information about the command, refer to the xref:configuration/server/occ_command.adoc#files-external[the occ files-external documentation].
 
 ==== Personal Share
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:create /my_share_name windows_network_drive \
     password::logincredentials \
@@ -312,7 +312,7 @@ For more information about the command, refer to the xref:configuration/server/o
     --user someuser
 ----
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:create /my_share_name windows_network_drive \
     password::logincredentials \
@@ -325,14 +325,14 @@ For more information about the command, refer to the xref:configuration/server/o
 
 ==== General Share
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:create /my_share_name windows_network_drive \
     password::logincredentials \
     --config={host=127.0.0.1, share='home', root='$user', domain='owncloud.local'}
 ----
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:create /my_share_name windows_network_drive \
     password::logincredentials \
@@ -349,14 +349,14 @@ You can create general and personal shares passing the configuration details via
 
 ==== General Share
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:import /import.json
 ----
 
 ==== Personal Share
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} files_external:import /import.json --user someuser
 ----
