--- a/modules/admin_manual/pages/configuration/server/logging/logging_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/logging/logging_configuration.adoc
@@ -37,6 +37,7 @@ The desired date format can optionally be defined using the *logdateformat* para
 By default the {php-net-url}/manual/en/function.date.php[PHP date function] parameter `__c__` is used, and therefore the date/time is written in the format `__2013-01-10T15:20:25+02:00__`. 
 By using the date format in the example below, the date/time format will be written in the format `__January 10, 2013 15:20:25__`.
 
+[source,php]
 ----
 "log_type" => "owncloud",
 "logfile" => "owncloud.log",
@@ -48,6 +49,7 @@ By using the date format in the example below, the date/time format will be writ
 
 All log information will be sent to your default syslog daemon.
 
+[source,php]
 ----
 "log_type" => "syslog",
 "logfile" => "",
@@ -58,11 +60,14 @@ The syslog format can be changed to remove or add information. In
 addition to the `%replacements%` below `%level%` can be used, but it is
 used as a dedicated parameter to the syslog logging facility anyway.
 
+[source,php]
 ----
 'log.syslog.format' => '[%reqId%][%remoteAddr%][%user%][%app%][%method%][%url%] %message%',
+----
 
-   For the old syslog message format use:
-
+For the old syslog message format use:
+[source,php]
+----
 'log.syslog.format' => '{%app%} %message%',
 ----
 
@@ -105,6 +110,7 @@ to the same logfile defined:
 
 * Requests matching `log_secret` are debug logged.
 
+[source,bash]
 ----
 curl -X PROPFIND -u sample-user:password \
   https://your_domain/remote.php/webdav/?log_secret=57b58edb6637fe3059b3595cf9c41b9
