--- a/modules/admin_manual/pages/configuration/server/oc_server_tuning.adoc
+++ b/modules/admin_manual/pages/configuration/server/oc_server_tuning.adoc
@@ -57,7 +57,7 @@ NOTE: The Linux kernel will silently truncate the TCP-backlog setting to the val
 To fix this warning, set the value of `net.core.somaxconn` to `65535` in
 `/etc/rc.local`, so that it persists upon reboot, by running the following command.
 
-[source,console]
+[source,bash]
 ----
 sudo echo sysctl -w net.core.somaxconn=65535 >> /etc/rc.local
 ----
@@ -65,7 +65,6 @@ sudo echo sysctl -w net.core.somaxconn=65535 >> /etc/rc.local
 After the next reboot, 65535 connections will be allowed, instead of the default value.
 
 === Transparent Huge Pages (THP)
-
 
 If you are experiencing latency problems with Redis, the following
 warning may appear in your Redis logs:
@@ -88,7 +87,7 @@ thousand pages, causing the copy-on-write of almost the entire process memory.
 
 As a result, make sure to disable Transparent Huge Pages using the following command:
 
-[source,console]
+[source,bash]
 ----
 echo never > /sys/kernel/mm/transparent_hugepage/enabled
 ----
@@ -184,8 +183,9 @@ MaxKeepAliveRequests 200
 
 ==== Hostname Lookups
 
+[source,bash]
 ----
-# cat /etc/httpd/conf/httpd.conf
+cat /etc/httpd/conf/httpd.conf
     ...
 HostnameLookups off
 ----
