--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -92,7 +92,7 @@ php -m | grep smbclient
 ----
 This should show the following output
 
-[source,console]
+[source,bash]
 ----
 libsmbclient
 smbclient
