--- a/modules/admin_manual/pages/maintenance/upgrading/update.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/update.adoc
@@ -78,7 +78,7 @@ running it as your HTTP user, instead of clicking the btn:[Start Update] button,
 
 This example is for Ubuntu Linux:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} upgrade
 ----
@@ -110,6 +110,7 @@ Replace the `ocpath` variable with the path to your ownCloud directory,
 and replace the `htuser` and `htgroup` variables with your HTTP user and
 group.
 
+[source,bash]
 ----
 #!/bin/bash
 # Sets permissions of the owncloud instance for updating
@@ -141,28 +142,28 @@ create checkpoints and to roll back to older checkpoints. You must run
 it as your HTTP user. This example on Ubuntu Linux displays command
 options:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php list
 ----
 
 See usage for commands, like this example for the `upgrade:checkpoint` command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php upgrade:checkpoint -h
 ----
 
 You can display a help summary:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php --help
 ----
 
 When you run it without options it runs a system check:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} owncloud/updater/application.php
 ownCloud updater 1.0 - CLI based ownCloud server upgrades
@@ -175,7 +176,7 @@ Done
 
 Create a checkpoint:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php upgrade:checkpoint --create
 Created checkpoint 9.0.0.12-56d5e4e004964
@@ -183,15 +184,14 @@ Created checkpoint 9.0.0.12-56d5e4e004964
 
 List checkpoints:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php upgrade:checkpoint --list
-[source,console]
 ----
 
 Restore an earlier checkpoint:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} updater/application.php \
     upgrade:checkpoint --restore=9.0.0.12-56d5e4e004964
@@ -199,7 +199,7 @@ Restore an earlier checkpoint:
 
 Add a line like this to your crontab to automatically create daily checkpoints:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 2 15 * * * {occ-command-example-prefix} /path/to/owncloud/updater/application.php
 upgrade:checkpoint --create > /dev/null 2>&1
@@ -214,7 +214,7 @@ to enter the unhashed secret into the web form.
 In case you forgot your password/secret, you can re-create it by
 changing config.php. You can run this on your shell:
 
-[source,console]
+[source,bash]
 ----
 php -r 'echo password_hash("Enter a random password here", PASSWORD_DEFAULT)."\n";'
 ----
