--- a/modules/admin_manual/partials/configuration/server/enable-single-user-mode.adoc
+++ b/modules/admin_manual/partials/configuration/server/enable-single-user-mode.adoc
@@ -3,8 +3,7 @@
 We strongly encourage you to put your server in single user mode before setting up encryption.
 To do so, run the following command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:singleuser --on
 ----
-
