--- a/modules/admin_manual/partials/maintenance/upgrading/upgrade_steps.adoc
+++ b/modules/admin_manual/partials/maintenance/upgrading/upgrade_steps.adoc
@@ -9,12 +9,15 @@ This documentation uses the same command as you will find there.
 Ensure that you have `subscription-manager` installed.
 If you don't, yet, have it installed, do so with the following command:
 
-[source,console]
+Install subscription manager
+[source,bash]
 ----
-# Install subscription manager
 yum install --assumeyes subscription-manager
+----
 
-# Add the required repositories for the PHP packages
+Add the required repositories for the PHP packages
+[source,bash]
+----
 subscription-manager repos --enable rhel-server-rhscl-7-rpms
 ----
 ====
@@ -24,7 +27,7 @@ subscription-manager repos --enable rhel-server-rhscl-7-rpms
 Then, proceed by installing the required PHP {to-version} packages. 
 You can use the command below to save you time.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 yum install \
   rh-php{to-pkg-version} \
@@ -50,7 +53,7 @@ yum install \
 Next, you need to enable PHP {to-version} and disable PHP {from-version} system-wide. 
 To enable PHP {to-version} system-wide, run the following command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 cp /opt/rh/rh-php{to-pkg-version}/enable /etc/profile.d/rh-php{to-pkg-version}.sh source /opt/rh/rh-php{to-pkg-version}/enable
 ----
@@ -58,7 +61,7 @@ cp /opt/rh/rh-php{to-pkg-version}/enable /etc/profile.d/rh-php{to-pkg-version}.s
 Then, you need to disable loading of the PHP {from-version} Apache modules. 
 You can do this either by changing their names, as in the example below, or deleting the files.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 mv /etc/httpd/conf.d/php.conf /etc/httpd/conf.d/php56.off
 mv /etc/httpd/conf.modules.d/10-php.conf /etc/httpd/conf.modules.d/10-php56.off
@@ -68,7 +71,7 @@ mv /etc/httpd/conf.modules.d/10-php.conf /etc/httpd/conf.modules.d/10-php56.off
 
 With that done, you next need to copy the PHP {to-version} Apache modules into place; that being the two Apache configuration files and the shared object file.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 cp /opt/rh/httpd24/root/etc/httpd/conf.d/rh-php{to-pkg-version}-php.conf /etc/httpd/conf.d/
 cp /opt/rh/httpd24/root/etc/httpd/conf.modules.d/15-rh-php{to-pkg-version}-php.conf /etc/httpd/conf.modules.d/
