--- a/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration_quick_guide.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration_quick_guide.adoc
@@ -16,7 +16,7 @@ This quick guide gives a brief summary of the commands needed without going into
 
 === Activate Master Key-Based Encryption
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:singleuser --on
 {occ-command-example-prefix} app:enable encryption
@@ -28,7 +28,7 @@ This quick guide gives a brief summary of the commands needed without going into
 
 === View the Encryption Status
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} encryption:status
 ----
@@ -37,7 +37,7 @@ This quick guide gives a brief summary of the commands needed without going into
 
 Depending on the amount of existing data, this operation can take a long time.
 
-[source,php,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:singleuser --on
 {occ-command-example-prefix} encryption:decrypt-all
@@ -46,16 +46,17 @@ Depending on the amount of existing data, this operation can take a long time.
 
 === Deactivate Master-Key-Based Encryption
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} encryption:disable
+
 # ignore the "already disabled" message
 {occ-command-example-prefix} app:disable encryption
 ----
 
 If the master key has been compromised or exposed, you can replace it. You will need the current master key for it.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} encryption:recreate-master-key
 ----
@@ -66,7 +67,7 @@ IMPORTANT: User-Key encryption has been deprecated with xref:{latest-docs-versio
 
 === Activate User-Key-Based Encryption
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:singleuser --on
 {occ-command-example-prefix} app:enable encryption
@@ -93,7 +94,7 @@ They need to:
 
 === View the Encryption Status
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} encryption:status
 ----
@@ -102,10 +103,11 @@ They need to:
 
 If you have an ownCloud instance with only a few users, you can use the following example to decrypt the files. Note that you have to enter the password for each user manually. The admin must ensure all users have enabled the recovery password option in their personal settings page.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:singleuser --on
 {occ-command-example-prefix} encryption:decrypt-all
+
 #Choose the "Recovery key" Option
 #Enter **Recovery Key** for **each user**
 
@@ -117,7 +119,7 @@ If you have a large instance with many users, use this to decrypt the files:
 
 * Set the environment  variable with e.g. `export OC_RECOVERY_PASSWORD=1111`, then run this set of commands and replace "1111" with your actual Recovery Key:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 export OC_RECOVERY_PASSWORD=1111
 {occ-command-example-prefix} maintenance:singleuser --on
@@ -127,7 +129,7 @@ sudo -E -u www-data php occ encryption:decrypt-all -m recovery -c yes
 
 === Deactivate User-Specific Key-based Encryption
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} encryption:disable
 
@@ -148,7 +150,7 @@ DELETE FROM oc_appconfig WHERE appid='encryption';
 
 The removal of remaining encryption keys is a manual process. You have to delete all encryption keys on the storage by running the following command. Modify the path to your data directory according to your installation. The `find` command limits the search to exactly one directory below the user level and for security reasons prompts before each deletion:
 
-[source,console]
+[source,bash]
 ----
 find /var/www/owncloud/data/ -mindepth 2 -maxdepth 2 -type d -name "files_encryption" -exec rm -R -i {} +
 ----
