--- a/modules/admin_manual/pages/configuration/files/trashbin_options.adoc
+++ b/modules/admin_manual/pages/configuration/files/trashbin_options.adoc
@@ -12,6 +12,7 @@ As the ownCloud server administrator, you have two `occ` commands for
 permanently deleting files from the Trashbin manually, without waiting
 for the normal aging-out process:
 
+[source,text]
 ----
 trashbin
  trashbin:cleanup   Remove deleted files
@@ -22,7 +23,7 @@ The `trashbin:cleanup` command removes the deleted files of all users,
 or you may specify certain users in a space-delimited list. This example
 removes all the deleted files of all users:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} trashbin:cleanup
 Remove all deleted files
@@ -35,7 +36,7 @@ Remove deleted files for users on backend Database
 
 This example removes the deleted files of user2 and user4:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} trashbin:cleanup user2 user4
  Remove deleted files of user2
@@ -51,7 +52,7 @@ storage quotas. Files may not be deleted if the space is not needed.
 The default is to delete expired files for all users, or you may list
 users in a space-delimited list:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} trashbin:cleanup user1 user2
  Remove deleted files of user1
