--- a/modules/admin_manual/pages/configuration/mimetypes/index.adoc
+++ b/modules/admin_manual/pages/configuration/mimetypes/index.adoc
@@ -73,7 +73,7 @@ Some common mimetypes that may be useful in creating aliases are:
 Once you have made changes to `config/mimetypealiases.json`, use xref:configuration/server/occ_command.adoc[the occ command] to propagate the changes throughout your ownCloud installation.
 Here is an example for Ubuntu Linux:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 $ {occ-command-example-prefix} maintenance:mimetype:update-js
 ----
@@ -103,7 +103,7 @@ NOTE: The name and location of the file are important. The location is because t
 
 1.  Run the following command to update the mimetype alias database.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 $ {occ-command-example-prefix} maintenance:mimetype:update-js
 ----
