--- a/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
@@ -15,7 +15,7 @@ Use the xref:configuration/server/occ_command.adoc#background-jobs-selector[occ 
 
 As an example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} background:cron
 ----
@@ -42,17 +42,17 @@ Using the operating system Cron feature is the preferred method for executing re
 
 For example, to run a Cron job on a *nix system every 15 minutes (recommended), under the default web server user (often, `www-data` or `wwwrun`) you must set up the following Cron job to call the occ `background:cron` command:
 
-[source,console]
+[source,bash]
 ----
-# sudo crontab -u www-data -e
+sudo crontab -u www-data -e
 */15  *  *  *  * /usr/bin/php -f /path/to/your/owncloud/occ system:cron
 ----
 
 You can verify if the cron job has been added and scheduled by executing:
 
-[source,console]
+[source,bash]
 ----
-# sudo crontab -u www-data -l
+sudo crontab -u www-data -l
 */15  *  *  *  * /usr/bin/php -f /path/to/your/owncloud/occ system:cron
 ----
 
@@ -84,7 +84,7 @@ Regardless of the approach which you take, since ownCloud 9.1, Cron jobs can be 
 
 There is no way to do so via the ownCloud UI. But, the most direct way to do so, is by opening three console tabs and in each one run
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} system:cron
 ----
@@ -119,7 +119,7 @@ NOTE: There is no matching background job to delete from the `oc_jobs` table.
 
 The ExpireTrash job, contained in `OCA\Files_Trashbin\BackgroundJob\ExpireTrash`, will remove any file in the ownCloud trash bin which is older than the specified maximum file retention time.  It can be run, as follows, using the xref:configuration/server/occ_command.adoc#trashbin[OCC trashbin] command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} trashbin:expire
 ----
@@ -128,7 +128,7 @@ The ExpireTrash job, contained in `OCA\Files_Trashbin\BackgroundJob\ExpireTrash`
 
 The ExpireVersions job, contained in `OCA\Files_Versions\BackgroundJob\ExpireVersions`, will expire versions of files which are older than the specified maximum version retention time. It can be run, as follows, using the xref:configuration/server/occ_command.adoc#versions[OCC versions] command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} versions:expire
 ----
@@ -139,7 +139,7 @@ CAUTION: Please take care when adding `ExpireTrash` and `ExpireVersions` as xref
 
 The `CardDAV SyncJob`, contained in `OCA\DAV\CardDAV\SyncJob`, syncs the local system address book, updating any existing contacts, and deleting any expired contacts. It can be run, as follows, using the xref:configuration/server/occ_command.adoc#dav-commands[OCC dav] command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} dav:sync-system-addressbook
 ----
@@ -151,7 +151,7 @@ OCAFederationSyncJob
 It can be run, as follows, using the
 xref:configuration/server/occ_command.adoc#federation-sync[OCC federation sync] command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} federation:sync-addressbooks
 ----
