--- a/modules/admin_manual/pages/configuration/server/index_php_less_urls.adoc
+++ b/modules/admin_manual/pages/configuration/server/index_php_less_urls.adoc
@@ -17,6 +17,7 @@ Finally the user running your Web server (e.g. `www-data`) needs to be able to w
 
 The first step is to configure the `overwrite.cli.url` and `htaccess.RewriteBase` config.php options (See config_sample_php_parameters). If you’re accessing your ownCloud instance via `\https://example.com/` the following two options need to be added / configured:
 
+[source,php]
 ----
 'overwrite.cli.url' => 'https://example.com',
 'htaccess.RewriteBase' => '/',
@@ -24,6 +25,7 @@ The first step is to configure the `overwrite.cli.url` and `htaccess.RewriteBase
 
 If the instance is accessed via `\https://example.com/owncloud` the following configuration is needed:
 
+[source,php]
 ----
 'overwrite.cli.url' => 'https://example.com/owncloud',
 'htaccess.RewriteBase' => '/owncloud',
