--- a/modules/admin_manual/pages/configuration/server/legal_settings_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/legal_settings_configuration.adoc
@@ -44,13 +44,16 @@ NOTE: The values entered will auto-save.
 
 From the command line, you can use the `occ config:app:get` and `occ config:app:set` commands, as in the code sample below.
 
-[source,console,subs="attributes+"]
+Get the current values, if any, for the Imprint and Privacy Policy URLs:
+[source,bash,subs="attributes+"]
 ----
-# Get the current values, if any, for the Imprint and Privacy Policy URLs
 {occ-command-example-prefix} config:app:get core legal.imprint_url
 {occ-command-example-prefix} config:app:get core legal.privacy_policy_url
+----
 
-# Set the Imprint and Privacy Policy URLs
+Set the Imprint and Privacy Policy URLs:
+[source,bash,subs="attributes+"]
+----
 {occ-command-example-prefix} config:app:set core legal.imprint_url --value=new_value
 {occ-command-example-prefix} config:app:set core legal.privacy_policy_url --value=new_value
 ----
