--- a/modules/admin_manual/pages/configuration/server/occ_command.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_command.adoc
@@ -78,7 +78,7 @@ On a regular ownCloud installation, `occ` is in the `owncloud/` directory, this 
 [TIP]
 ====
 Use the following command to find your HTTP user:
-[source,console]
+[source,bash]
 ----
 ps -ef | egrep '(apache|apache2)' | grep -v `whoami` | grep -v root | head -n1 | awk '{print $1}'
 ----
@@ -87,7 +87,7 @@ ps -ef | egrep '(apache|apache2)' | grep -v `whoami` | grep -v root | head -n1 |
 If your HTTP server is configured to use a different PHP version than the default (/usr/bin/php), `occ` should be run with the same version. +
 For example, in CentOS with SCL-PHP74 installed, the command looks like this:
 
-[source,console]
+[source,bash]
 ----
 sudo -u apache /opt/rh/php74/root/usr/bin/php /var/www/html/owncloud/occ
 ----
@@ -102,13 +102,13 @@ The `occ` command has _options_, _commands_, and _arguments_.
 
 The generic syntax is:
 
-[source,console]
+[source,bash]
 ----
 occ [options] command [arguments]
 ----
 
 .Example command running occ in Ubuntu
-[source,console]
+[source,bash]
 ----
 sudo -u www-data /var/www/owncloud/occ
 ----
@@ -119,7 +119,7 @@ If your web server is configured to use a different PHP version than the default
 
 If your ownCloud instance is set up in a docker container, you need a user in the group `docker` to perform `occ` commands. An example command looks like this:
 
-[source,console]
+[source,docker]
 ----
 docker exec --user www-data <owncloud-container-name> php occ <your-command>
 ----
@@ -140,7 +140,7 @@ If you want to find out more about the Appliance, click xref:appliance/index.ado
 
 Running `occ` with no options lists all commands and options, like this example on Ubuntu:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix}
 ownCloud version 10.8.0
@@ -171,14 +171,14 @@ Available commands:
 This is the same as `{occ-command-example-prefix} list`. 
 Run it with the `-h` option for syntax help:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} -h
 ----
 
 Display your ownCloud version:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} -V
   ownCloud version 10.8.0
@@ -186,7 +186,7 @@ Display your ownCloud version:
 
 Query your ownCloud server status:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} status
   - installed: true
@@ -199,7 +199,7 @@ The `status` command from above has an option to define the output format.
 
 The default is plain text, but it can also be `json`:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} status --output=json
 {"installed":true,"version":"10.8.0.4","versionstring":"10.8.0","edition":""}
@@ -207,7 +207,7 @@ The default is plain text, but it can also be `json`:
 
 or `json_pretty`:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} status --output=json_pretty
 {
@@ -222,7 +222,7 @@ This output option is available on all list and list-like commands, which includ
 
 Get detailed information on individual commands with the `help` command, like in this example for the `maintenance:mode` command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} help maintenance:mode --help
 Usage:
