--- a/modules/admin_manual/pages/configuration/server/reverse_proxy_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/reverse_proxy_configuration.adoc
@@ -62,6 +62,7 @@ the IP address `10.0.0.1` you can set the following parameters inside the config
 
 With an Apache as reverse proxy (ssl-proxy.tld) you can use this configuration:
 
+[source,apache]
 ----
 ProxyPass "/domain.tld/owncloud" "http://domain.tld/owncloud"
 ProxyPassReverse "/domain.tld/owncloud" "http://domain.tld/owncloud"
