--- a/modules/admin_manual/pages/configuration/server/ui-configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/ui-configuration.adoc
@@ -17,21 +17,21 @@ image:configuration/server/ui-configuration/upload-progress-bar.png[Upload Progr
 
 This progress bar can be hidden with the following command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files hide_upload_estimation --value="yes"
 ----
 
 To show the progress bar again, type one of the following commands:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set files hide_upload_estimation --value="no"
 ----
 
 or
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:delete files hide_upload_estimation
 ----
