--- a/modules/admin_manual/pages/enterprise/reporting/metrics.adoc
+++ b/modules/admin_manual/pages/enterprise/reporting/metrics.adoc
@@ -86,7 +86,7 @@ To get started, you have to set a secret for authenticating requests at the endp
 
 See the following occ command on how to set it. Make up a passphrase, referred to as `<your-metrics-secret>` in the example below. The Metrics secret is necessary to use the dashboard.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:system:set "metrics_shared_secret" --value "<your-metrics-secret>"
 ----
@@ -98,7 +98,7 @@ instead of using the occ command.
 
 The dashboard is enabled by default. You can disable it with the following command:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set metrics disable_dashboard --value=yes
 ----
@@ -109,6 +109,7 @@ The dashboard is enabled by default. You can disable it with the following comma
 
 To query for the Metrics data, use the following endpoint:
 
+[source,text]
 ----
 https://<your owncloud>/ocs/v1.php/apps/metrics/api/v1/metrics
 ----
@@ -124,7 +125,7 @@ Except for the header, all other parameters are optional. You can split the quer
 
 See the `curl` example to request the complete output:
 
-[source,console]
+[source,bash]
 ----
 curl -H "OC-MetricsApiKey: <your-metrics-secret>" \
      "https://<your owncloud>/ocs/v1.php/apps/metrics/api/v1/metrics?users=true&files=true&shares=true&quota=true&userData=true&format=json"
@@ -143,7 +144,7 @@ TIP: In the following `curl` examples, replace `<your-metrics-secret>` with your
 
 To receive user metrics, use:
 
-[source,console]
+[source,bash]
 ----
 curl -H "Content-Type: application/csv" \
      -H "OC-MetricsApiKey: <your-metrics-secret>" \
@@ -153,7 +154,7 @@ curl -H "Content-Type: application/csv" \
 
 For system metrics, use:
 
-[source,console]
+[source,bash]
 ----
 curl -H "Content-Type: application/csv" \
      -H "OC-MetricsApiKey: <your-metrics-secret>" \
