--- a/modules/admin_manual/pages/enterprise/user_management/user_auth_shibboleth.adoc
+++ b/modules/admin_manual/pages/enterprise/user_management/user_auth_shibboleth.adoc
@@ -48,7 +48,7 @@ After enabling the app it will be in *Not active* mode, which ignores a Shibbole
 Use this mode to set up the environment mapping for the other modes, and in case you locked yourself out of the system. 
 You can also change the app mode and environment mappings by using the `occ` command, like this example on Ubuntu Linux:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} shibboleth:mode notactive
 {occ-command-example-prefix} shibboleth:mapping --uid login
@@ -80,10 +80,9 @@ In ownCloud 8.2+ the variables are stored in the ownCloud database, making Shibb
 
 === Mapping ownCloud User IDs
 
-From 3.1.2 you can now specify a mapper that is used on inbound ownCloud user IDs, to adjust them before usage in ownCloud. 
-You can set the mapper using `occ`:
+From 3.1.2 you can now specify a mapper that is used on inbound ownCloud user IDs, to adjust them before usage in ownCloud. You can set the mapper using `occ`:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} config:app:set user_shibboleth \
      uid_mapper --value="OCA\User_Shibboleth\Mapper\ADFSMapper"
@@ -91,7 +90,7 @@ You can set the mapper using `occ`:
 
 You may view the currently configured mapper using:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} shibboleth:mapping
 ----
