--- a/modules/admin_manual/pages/installation/selinux_configuration.adoc
+++ b/modules/admin_manual/pages/installation/selinux_configuration.adoc
@@ -18,6 +18,7 @@ The following settings should work for most SELinux systems that use the
 default distro profiles. Run these commands as root, and remember to
 adjust the filepaths in these examples for your installation
 
+[source,console]
 ----
 semanage fcontext -a -t httpd_sys_rw_content_t '/var/www/html/owncloud/data(/.*)?'
 semanage fcontext -a -t httpd_sys_rw_content_t '/var/www/html/owncloud/config(/.*)?'
@@ -33,6 +34,7 @@ If you uninstall ownCloud you need to remove the ownCloud directory
 labels. To do this execute the following commands as root after
 uninstalling ownCloud
 
+[source,console]
 ----
 semanage fcontext -d '/var/www/html/owncloud/data(/.*)?'
 semanage fcontext -d '/var/www/html/owncloud/config(/.*)?'
@@ -47,6 +49,7 @@ restorecon -Rv '/var/www/html/owncloud/'
 If you have customized SELinux policies and these examples do not work,
 you must give the HTTP server write access to these directories:
 
+[source,text]
 ----
 /var/www/html/owncloud/data
 /var/www/html/owncloud/config
@@ -59,12 +62,14 @@ you must give the HTTP server write access to these directories:
 To enable updates via the ownCloud web interface, you may need this to
 enable writing to the ownCloud directories:
 
+[source,console]
 ----
 setsebool httpd_unified on
 ----
 
 When the update is completed, disable write access:
 
+[source,console]
 ----
 setsebool -P  httpd_unified  off
 ----
@@ -74,6 +79,7 @@ setsebool -P  httpd_unified  off
 For security reasons it’s suggested to disable write access to all
 folders in /var/www/ (default):
 
+[source,console]
 ----
 setsebool -P  httpd_unified  off
 ----
@@ -83,6 +89,7 @@ setsebool -P  httpd_unified  off
 An additional setting is needed if your installation is connecting to a
 remote database:
 
+[source,console]
 ----
 setsebool -P httpd_can_network_connect_db on
 ----
@@ -91,6 +98,7 @@ setsebool -P httpd_can_network_connect_db on
 
 Use this setting to allow LDAP connections:
 
+[source,console]
 ----
 setsebool -P httpd_can_connect_ldap on
 ----
@@ -101,6 +109,7 @@ ownCloud requires access to remote networks for functions such as
 Server-to-Server sharing, external storages or the ownCloud Marketplace.
 To allow this access use the following setting:
 
+[source,console]
 ----
 setsebool -P httpd_can_network_connect on
 ----
@@ -110,6 +119,7 @@ setsebool -P httpd_can_network_connect on
 This setting is not required if `httpd_can_network_connect` is already
 on:
 
+[source,console]
 ----
 setsebool -P httpd_can_network_memcache on
 ----
@@ -119,6 +129,7 @@ setsebool -P httpd_can_network_memcache on
 If you want to allow ownCloud to send out e-mail notifications via
 sendmail you need to use the following setting:
 
+[source,console]
 ----
 setsebool -P httpd_can_sendmail on
 ----
@@ -128,6 +139,7 @@ setsebool -P httpd_can_sendmail on
 If you have placed your datadir on a CIFS/SMB share use the following
 setting:
 
+[source,console]
 ----
 setsebool -P httpd_use_cifs on
 ----
@@ -137,6 +149,7 @@ setsebool -P httpd_use_cifs on
 If your owncloud data folder resides on a Fuse Filesystem (e.g. EncFS
 etc.), this setting is required as well:
 
+[source,console]
 ----
 setsebool -P httpd_use_fusefs on
 ----
@@ -146,6 +159,7 @@ setsebool -P httpd_use_fusefs on
 If you use the rainloop webmail client app which supports GPG/PGP, you
 might need this:
 
+[source,console]
 ----
 setsebool -P httpd_use_gpg on
 ----
@@ -157,6 +171,7 @@ setsebool -P httpd_use_gpg on
 For general Troubleshooting of SELinux and its profiles try to install
 the package `setroubleshoot` and run:
 
+[source,console]
 ----
 sealert -a /var/log/audit/audit.log > /path/to/mylogfile.txt
 ----
@@ -166,6 +181,7 @@ to get a report which helps you to configure your SELinux profiles.
 Another tool for troubleshooting is to enable a single ruleset for your
 ownCloud directory:
 
+[source,console]
 ----
 semanage fcontext -a -t httpd_sys_rw_content_t '/var/www/html/owncloud(/.*)?'
 restorecon -RF /var/www/html/owncloud
