--- a/modules/admin_manual/pages/maintenance/backup_and_restore/backup.adoc
+++ b/modules/admin_manual/pages/maintenance/backup_and_restore/backup.adoc
@@ -27,7 +27,7 @@ IMPORTANT: If you have customized user home directories or a custom location for
 
 To ensure a consistent backup, stop your web server to prevent users from trying to access ownCloud via the web. As an alternative, you can stop serving the virtual host for ownCloud:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 sudo service apache2 stop
 ----
@@ -49,7 +49,7 @@ If you have installed your ownCloud server from our deprecated Open Build Servic
 
 If possible, simply copy the directories from your ownCloud installation to your backup location, for example by running the following command from the owncloud directory. The following example command copies all directories mentioned above:
 
-[source,console]
+[source,bash]
 ----
 rsync -Aax config data apps apps-external /oc-backupdir/
 ----
@@ -64,7 +64,7 @@ You can't just copy a database, but must use the database tools to make a correc
 
 Before backing up the database, set your ownCloud instance into maintenance mode:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:mode --on
 ----
@@ -75,7 +75,7 @@ NOTE: This guide uses a backup file name like `owncloud-dbbackup_<timestamp>.bak
 
 Depending on the database version and the setup, username and password may not be necessary. The general command to back up MySQL/MariaDB looks like this:
 
-[source,console]
+[source,bash]
 ----
 sudo mysqldump --single-transaction -h [server] \
  -u [username] -p [password] \
@@ -84,7 +84,7 @@ sudo mysqldump --single-transaction -h [server] \
 
 Example, replace username and password according your setup:
 
-[source,console]
+[source,bash]
 ----
 sudo mysqldump --single-transaction -h localhost \
  -u username -p password \
@@ -93,7 +93,7 @@ sudo mysqldump --single-transaction -h localhost \
 
 === SQLite
 
-[source,console]
+[source,bash]
 ----
 sqlite3 data/owncloud.db .dump > owncloud-dbbackup_`date +"%Y%m%d"`.bak
 ----
@@ -111,7 +111,7 @@ PGPASSWORD="password" pg_dump [db_name] \
 
 Use this if you want to protect against an accidental deletion of cron entries, plan to restore to a different server like a physical migration or you need to set up a server from scratch.
 
-[source,console,subs="attributes+"]
+[source,bash]
 ----
 sudo crontab -u www-data -l > www-data_crontab.bak
 ----
@@ -123,14 +123,14 @@ sudo crontab -u www-data -l > www-data_crontab.bak
 Perform the following tasks to reactivate your ownCloud instance:
 
 .Bring back ownCloud into normal operation mode
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:mode --off
 ----
 
 .Enable browser access
 Start your web server, or alternatively enable the virtual host serving ownCloud:
-[source,console]
+[source,bash]
 ----
 sudo service apache2 start
 ----
