--- a/modules/admin_manual/pages/maintenance/migrating.adoc
+++ b/modules/admin_manual/pages/maintenance/migrating.adoc
@@ -105,14 +105,14 @@ this migration work:
 
 If not already available on the new server, make sure SSH is installed:
 
-[source,console]
+[source,bash]
 ----
 sudo apt install ssh -y
 ----
 
 Next, edit ssh-config and enable root ssh login.
 
-[source,console]
+[source,bash]
 ----
 nano /etc/ssh/sshd_config
 PermitRootLogin yes
@@ -120,7 +120,7 @@ PermitRootLogin yes
 
 And then restart SSH.
 
-[source,console]
+[source,bash]
 ----
 sudo service ssh restart
 ----
@@ -134,7 +134,7 @@ Lastly, install ownCloud on the new server.
 The first step is to enable maintenance mode. To do that, use the
 following commands:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 cd /var/www/owncloud/
 {occ-command-example-prefix} maintenance:mode --on
@@ -142,7 +142,7 @@ cd /var/www/owncloud/
 
 After that’s done, then wait a few minutes and stop your web server, in this case Apache:
 
-[source,console]
+[source,bash]
 ----
 sudo service apache2 stop
 ----
@@ -152,7 +152,7 @@ sudo service apache2 stop
 Now, you have to transfer the database from the old server to the new
 one. To do that, first backup the database.
 
-[source,console]
+[source,bash]
 ----
 cd /var/www/owncloud/
 mysqldump --single-transaction -h localhost \
@@ -161,14 +161,14 @@ mysqldump --single-transaction -h localhost \
 
 Then, export the database to the new server.
 
-[source,console]
+[source,bash]
 ----
 rsync -v owncloud-dbbackup.bak root@new_server_address:/var/www/owncloud
 ----
 
 With that completed, import the database on new server.
 
-[source,console]
+[source,bash]
 ----
 mysql -h localhost -u admin -ppassword owncloud < owncloud-dbbackup.bak
 ----
@@ -193,7 +193,7 @@ Either dumping your MyISAM tables separately from InnoDB tables or use `--lock-t
 The following ownCloud directories will be synced to the target instance:
 `apps`, `config` and `data`.
 
-[source,console]
+[source,bash]
 ----
 rsync -avt apps config data root@new_server_address:/var/www/owncloud
 ----
@@ -210,14 +210,14 @@ xref:maintenance/manually-moving-data-folders.adoc[the data directory migration 
 Now it’s time to finish the migration. To do that, on the new server,
 first verify that ownCloud is in maintenance mode.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:mode
 ----
 
 Next, start up the database and web server on the new machine.
 
-[source,console]
+[source,bash]
 ----
 sudo service mysql start
 sudo service apache2 start
@@ -228,7 +228,7 @@ instance, and confirm that you see the maintenance mode notice, and that
 no error messages occur. If both of these occur, take ownCloud out of
 maintenance mode.
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} maintenance:mode --off
 ----
@@ -244,7 +244,7 @@ to `no` and restart ssh. To do that, run the following command:
 
 NOTE: This is a security measure and improves SSH security.
 
-[source,console]
+[source,bash]
 ----
 sudo service ssh restart
 ----
