--- a/modules/admin_manual/partials/configuration/server/occ_command/system_command.adoc
+++ b/modules/admin_manual/partials/configuration/server/occ_command/system_command.adoc
@@ -6,7 +6,7 @@
   system:cron             Execute background jobs as cron
 ----
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} -h system:cron
 -Usage:
@@ -24,7 +24,7 @@ Do not use when executing from crontab
 
 To execute xref:configuration/server/background_jobs_configuration.adoc[background jobs] using xref:configuration/server/background_jobs_configuration.adoc#cron[cron], you can use the `system:cron` command, as in the following example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 {occ-command-example-prefix} system:cron
 ----
@@ -49,12 +49,15 @@ However, in a non-interactive environment, such as crontab, it should not be use
 If you have already automated background jobs via Cron, you must update the relevant `crontab` entry
 using the example below as a guide.
 
+Instead of the following configuration
 [source,console,subs="attributes+"]
 ----
-# Instead of the following configuration
 /usr/bin/php -f /path/to/your/owncloud/cron.php
+----
 
-# Use the following one instead
+Use the following one instead
+[source,bash,subs="attributes+"]
+----
 {occ-command-example-prefix} system:cron
 ----
 ====
