--- a/modules/admin_manual/partials/installation/manual_installation/mariadb.adoc
+++ b/modules/admin_manual/partials/installation/manual_installation/mariadb.adoc
@@ -8,7 +8,7 @@ Use these commands to install MariaDB provided by Ubuntu and secure its installa
 
 NOTE: At the time of writing, with Ubuntu 20.04, `mariadb-server` version `10.4.21` will be installed:
 
-[source,console]
+[source,bash]
 ----
 sudo apt install mariadb-server
 sudo mysql_secure_installation
@@ -16,13 +16,14 @@ sudo mysql_secure_installation
 
 Check access and the version of MariaDB, replace `<admin_user>` as either defined during `mysql_secure_installation` above or use e.g. `root`.
 
-[source,console]
+[source,bash]
 ----
 sudo mysqladmin -u <admin_user> -p version
 ----
 
 If you get output like below, your database is up and running and ready to serve requests.
 
+[source,text]
 ----
 mysqladmin  Ver 9.1 Distrib 10.4.21-MariaDB, for debian-linux-gnu on x86_64
 Copyright (c) 2000, 2021, Oracle, MariaDB Corporation Ab and others.
@@ -54,7 +55,7 @@ WARNING: You must not skip minor releases of MariaDB when upgrading like from 10
 ====
 If you have an existing installation of MariaDB and upgrade to a higher version, do not forget to run the following command to handle the new setup for admin users — especially when running an older version of MariaDB and upgrading to MariaDB 10.4.3 upwards:
 
-[source,console]
+[source,bash]
 ----
 sudo mysql_upgrade 
 ----
@@ -69,7 +70,7 @@ For MariaDB server releases lower than 10.4.3, you will be prompted during the i
 
 To install an ownCloud database, you need an administrative user who can log in, has rights to create/modify databases and users. If this user does not exist, like on MariaDB server releases higher than 10.4.3, or if you want to create a temporary user for this task, you manually have to create one. You will be asked for the mysql root user's password:
 
-[source,console]
+[source,bash]
 ----
 sudo mysql --user=root -p
 
@@ -88,7 +89,7 @@ From MariaDB 10.4.3 onwards, the authentication method has changed to UNIX socke
 _This is not the ownCloud user!_ +
 _Don't forget to change the username and password according to your needs_.
 
-[source,console]
+[source,bash]
 ----
 sudo mysql
 MariaDB [(none)]>
@@ -103,11 +104,18 @@ MariaDB [(none)]>
 
 If you want to install phpMyAdmin as a graphical interface for administering the database, run the following command:
 
-[source,console]
+[source,bash]
 ----
 sudo apt install phpmyadmin
 ----
 
 After the installation, you need to configure your web server to access `phpmyadmin`. This is a manual task, depending on what your setup looks like and is not part of this documentation.
 
-NOTE: You can run `sudo dpkg-reconfigure phpmyadmin` to reconfigure phpmyadmin. 
+[NOTE]
+====
+You can run
+[source,bash]
+----
+sudo dpkg-reconfigure phpmyadmin
+----
+to reconfigure phpmyadmin. 
